# seed

./: .gitignore  debug.txt  pyproject.toml
config/: seed_sent_selection.json
config/dpr/: dpr_generate_positives.yaml  dpr_index.yaml  dpr_segment.yaml
config/eval/: bm25.yaml  dpr_search.yaml
config/infotab/: infotab_train.libsonnet  pipeline_totto_infotab.jsonnet  sent_selection.yaml  sent_selection_convert.yaml  sent_selection_train.yaml  train_sent_selection.jsonnet  train_verification.jsonnet  verification.yaml  verification_convert.yaml  verification_train.yaml
config/pipeline/: pipeline_eval_totto.jsonnet  pipeline_generate.yaml  pipeline_tapas_totto.jsonnet  pipeline_totto.yaml
config/seed/: callbacks.libsonnet  pipeline_infotab_seed.jsonnet  pipeline_totto_seed.jsonnet  seed_cell_generate.yaml  seed_evaluate_generate.yaml  seed_filter.yaml  seed_lm_train.yaml  seed_sent_eval.yaml  seed_sent_generate.yaml  seed_sent_selection.jsonnet  train_sent_selection.jsonnet  train_verification.jsonnet  trainer.libsonnet
config/tapas/: pipeline_infotab_tapas.jsonnet  pipeline_totto_tapas.jsonnet  tapas_sent_train.yaml  tapex_sent_train.yaml  tapex_verification_train.yaml  train_sent_selection.jsonnet  train_verification.jsonnet
config/tapex/: pipeline_totto_tapex.jsonnet  train_sent_selection.jsonnet  train_verification.jsonnet
config/train/: config_cell_selection.yaml  config_seed_sent_selection.yaml  (+1 more)
demo/: augmented_validation.ipynb  check.ipynb  check_list_articles.ipynb  data_analysis.ipynb  data_augmentation.ipynb  data_checking.ipynb  demo.ipynb  dpr_encoder.ipynb  faiss_eval.ipynb  linearize.ipynb  numeric-er.ipynb  retrieve.ipynb  retrieve_wiki.ipynb  sentence_selection.ipynb  tango.ipynb
scripts/: faiss.sh  index.sh
(+126 files in other folders)
