[tool.poetry]
name = "read"
version = "0.1.0"
description = ""
authors = ["Minh Pham <minhpham@usc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.2"
kilt = {git = "https://github.com/facebookresearch/KILT.git"}
pytorch-lightning = "^1.6.5"
hydra-core = "^1.2.0"
pyrootutils = "^1.0.4"
jsonlines = "^3.1.0"
loguru = "^0.6.0"
nltk = "^3.7"
pandas = "^1.4.3"
pyserini = "^0.17.0"
polars = {extras = ["pyarrow"], version = "^0.13.58"}
tqdm = "^4.64.0"
ray = {extras = ["default"], version = "^1.13.0"}
ujson = "^5.4.0"
datasets = "^2.4.0"
tokenizers = "^0.12.1"
wandb = "^0.12.21"
spacy = {extras = ["cuda113"], version = "^3.4.1"}
elasticsearch-dsl = "^7.4.0"
sentence-transformers = "^2.2.2"
jaro-winkler = "^2.0.3"
evaluate = "^0.2.2"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
sacrebleu = "^2.2.0"
sacremoses = "^0.0.53"
blingfire = "^0.1.8"
huggingface-hub = "^0.9.1"
accelerate = "^0.12.0"
Unidecode = "^1.3.4"
inflect = "^6.0.0"
seaborn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
poethepoet = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
torch-cuda102 = "pip install torch==1.12.0+cu102 torchvision==0.13.0+cu102 torchaudio==0.12.0 --extra-index-url https://download.pytorch.org/whl/cu102"
torch-cuda113 = "pip install torch==1.12.0+cu113 torchvision==0.13.0+cu113 torchaudio==0.12.0 --extra-index-url https://download.pytorch.org/whl/cu113"